--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>webpack_learn</title>
 </head>
 <body>
-哈哈哈哈哈哈
+    <div class="test">
+        <p>哈哈哈哈哈哈www</p>
+    </div>
+
 </body>
 </html>
